# serializer version: 1
# name: test_platform_setup_and_discovery[dlq_earu_electric_eawcpt][switch.single_channel_metering_magnetic_circuit_breaker_child_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.single_channel_metering_magnetic_circuit_breaker_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'child_lock',
    'unique_id': 'tuya.mocked_device_idchild_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[dlq_earu_electric_eawcpt][switch.single_channel_metering_magnetic_circuit_breaker_child_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Single Channel Metering Magnetic Circuit Breaker Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.single_channel_metering_magnetic_circuit_breaker_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[dlq_earu_electric_eawcpt][switch.single_channel_metering_magnetic_circuit_breaker_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.single_channel_metering_magnetic_circuit_breaker_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch',
    'unique_id': 'tuya.mocked_device_idswitch',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[dlq_earu_electric_eawcpt][switch.single_channel_metering_magnetic_circuit_breaker_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Single Channel Metering Magnetic Circuit Breaker Switch',
    }),
    'context': <ANY>,
    'entity_id': 'switch.single_channel_metering_magnetic_circuit_breaker_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
